# OpenGL-OBJ-Viewer

./: CMakeLists.txt  README.md  vcpkg.json
res/shaders/: obj_viewer.fs  obj_viewer.vs
src/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp
